# evawiki-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mcp.json.example  pyproject.toml  requirements.txt
evawiki_mcp/: evawiki_client.py  server.py
examples/: mcp.json
src/evawiki_mcp/: __init__.py  __main__.py  evawiki_client.py  server.py
tests/: __init__.py  test_client.py  test_import.py  test_main.py
